[package]
name = "ink-engine"
version = "0.1.0"
authors = ["Colbyn Wadman <hello@colbyn.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.73"
num = "0.4.0"
either = "1.6.1"
console_error_panic_hook = "0.1.6"
serde = {version = "1.0.125", features = ["derive", "rc"]}
serde_json = "1.0.64"
futures = "0.3.14"
wasm-bindgen-futures = "0.4.23"
js-sys = "0.3.50"
# rand = {version="0.6.5", features = ["wasm-bindgen"]}
compiler = {path = "../compiler"}

[dependencies.web-sys]
version = "0.3.4"
features = [
    'console',
    'CanvasRenderingContext2d',
    'Document',
    'Element',
    'HtmlElement',
    'HtmlCanvasElement',
    'EventTarget',
    'Event',
    'HtmlCollection',
    'Node',
    'NodeList',
    'HtmlInputElement',
    'HtmlStyleElement',
    'Text',
    'CharacterData',
    'History',
    'Location',
    'Storage',
    'Window',
    'StyleSheet',
    'CssStyleSheet',
    'DomTokenList',
]
